--- a/content/ja/learn/module-0/index.mdx
+++ b/content/ja/learn/module-0/index.mdx
@@ -7,11 +7,15 @@ featuredImage: images/shares/play-of-pattern.png
 
 # 🌠 Module 0 - An Introduction to Kernel
 
+<!--
 Kernel is an 8 week program, and we'll be covering a new learning module each week. 
 Each module is made up of two sections: **Crafted Reading**, which we encourage you to 
 have read before the beginning of each new week; and **Curated Briefs** which are made up of 
 articles, videos, and the occasional podcast that we _highly recommend_ you go over before the 
 Fireside Chat each week.
+-->
+
+カーネルは
 
 The Learn Track aims to provide a more holistic framing of what Web 3 is — its principles, 
 history, and present state. We know that different people learn differently, hence the mix of 
